# KMP-FaceLink

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  Package.swift  README.md  TASKS.md  build.gradle.kts  detekt.yml  gradle.properties  settings.gradle.kts
.claude/: settings.json
.claude/agents/: build-runner.md  kmp-investigator.md  kmp-reviewer.md  module-explorer.md  platform-checker.md
.claude/commands/: dev.md  investigate.md  review.md
.claude/skills/audit/: SKILL.md
.claude/skills/dev/: SKILL.md
.github/workflows/: ci.yml  docs.yml  publish.yml
androidApp/: build.gradle.kts  proguard-rules.pro
docs/: ROADMAP.md  extension-strategy.md
gradle/: libs.versions.toml
iosApp/: Live2DConfig.xcconfig  project.yml
iosApp/FaceLink/: ARCameraView.swift  ActionsTrackingView.swift  ContentView.swift  EffectsTrackingView.swift  HandTrackingView.swift  HolisticTrackingView.swift  Info.plist  StreamTrackingView.swift  VoiceTrackingView.swift
iosApp/FaceLink.xcodeproj/: project.pbxproj
iosApp/iosApp/: ContentView.swift  Info.plist
kmp-facelink/: build.gradle.kts
kmp-facelink-actions/: build.gradle.kts
kmp-facelink-avatar/: build.gradle.kts
kmp-facelink-effects/: build.gradle.kts
kmp-facelink-live2d/: build.gradle.kts
kmp-facelink-llm/: build.gradle.kts
kmp-facelink-rive/: build.gradle.kts
kmp-facelink-stream/: build.gradle.kts
kmp-facelink-voice/: build.gradle.kts
kmp-facelink-voice/src/androidMain/jni/: CMakeLists.txt  whisper_jni.c
sample/: build.gradle.kts
scripts/: setup-live2d.sh  setup-whisper-ios.sh
(+305 files in other folders)
